apps/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: finance

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: actual-budget

  ports:
    - name: http
      protocol: TCP
      port: 5006
      targetPort: http
